WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70930
[GTK] Fix gtk-doc warnings and style issues in WebKit2 GTK+ API
https://bugs.webkit.org/show_bug.cgi?id=70930
Summary
[GTK] Fix gtk-doc warnings and style issues in WebKit2 GTK+ API
Carlos Garcia Campos
Reported
2011-10-26 08:34:46 PDT
We have several warnings and doc style issues.
Attachments
Patch
(23.85 KB, patch)
2011-10-26 08:36 PDT
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-10-26 08:36:15 PDT
Created
attachment 112514
[details]
Patch
WebKit Review Bot
Comment 2
2011-10-26 08:39:14 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Alejandro G. Castro
Comment 3
2011-10-26 10:40:50 PDT
Landed!
http://trac.webkit.org/changeset/98497
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug