2011-10-26  Carlos Garcia Campos  <cgarcia@igalia.com>

[GTK] Fix gtk-doc warnings and style issues in WebKit2 GTK+ API
        https://bugs.webkit.org/show_bug.cgi?id=70930

        Reviewed by Martin Robinson.

        * UIProcess/API/gtk/WebKitBackForwardListItem.cpp:
        * UIProcess/API/gtk/WebKitSettings.cpp:
        (webkit_settings_class_init):
        * UIProcess/API/gtk/WebKitWebView.h:
        * UIProcess/API/gtk/docs/webkit2gtk-sections.txt:

Canonical link: https://commits.webkit.org/87147@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98497 268f45cc-cd09-0410-ab3c-d52691b4dbfc